[metadata]
name = requests_splash
version = attr: read_version_file.version
description = Splash headless browser adapter for Requests.
long_description = file: README.rst, HISTORY.rst
author = Antoine Cezar
author_email = antoine@cezar.fr
url = https://github.com/AntoineCezar/requests-splash
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # TODO: put package requirements here

[options.entry_points]
console_scripts =
    requests-splash = requests_splash.cli:main

[options.extras_require]
testing =
    # TODO: put package testing requirements here
develop =
    bumpversion
    coverage
    flake8
    mypy
    sphinx
    watchdog
    wheel
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
